securityManager，有bug，加了安全管理器后就是识别不了Main